@@ -6,7 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -15,19 +15,15 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOriginPatterns(Arrays.asList(
-                "http://srv-dpi-proj-mathquest-prod.univ-rouen.fr:3000",
-                "http://srv-dpi-proj-mathquest-prod.univ-rouen.fr:5000",
-                "http://srv-dpi-proj-mathquest-prod.univ-rouen.fr",
-                "http://localhost:3000",
-                "http://10.130.163.148:5000"
-        ));
 
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        // Allow all origins, but Nginx will handle restricting them
+        config.addAllowedOriginPattern("*");
+
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        config.setAllowCredentials(true); // Keep credentials enabled
+
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
     }
-
 }
